--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- styles -->
 		<link href="Resources/Styles/browserReset.css" type="text/css" rel="stylesheet" />
 		<link href="Resources/Styles/styles.less" type="text/css" rel="stylesheet/less"/>
+		<link href="Resources/Styles/pages.css" type="text/css" rel="stylesheet"/>
 
 		<script src="Lib/less/less.min.js"></script>
 		<script src="Lib/RequireJS/require.js" data-main="initialize.js"></script>
