Implement saving to file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<link href="Resources/Styles/pages.css" type="text/css" rel="stylesheet"/>
 
 		<script src="Lib/less/less.min.js"></script>
+		<script src="Lib/FileSaver/FileSaver.js"></script>
 		<script src="Lib/RequireJS/require.js" data-main="initialize.js"></script>
+
 
 	</head>
 	<body data-ng-view></body>
