Add manifest & Icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 
+		<link rel="shortcut icon" href="./Resources/Img/appIcon.png" />
+
 		<!-- styles -->
 		<link href="Resources/Styles/browserReset.css" type="text/css" rel="stylesheet" />
 		<link href="Resources/Styles/styles.less" type="text/css" rel="stylesheet/less"/>
