Refactoring: Change initialize and angularConfig to typescript

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<script src="Lib/less/less.min.js"></script>
 		<script src="Lib/FileSaver/FileSaver.js"></script>
-		<script src="Lib/RequireJS/require.js" data-main="initialize.js"></script>
+		<script src="Lib/RequireJS/require.js" data-main="Main.js"></script>
 
 
 	</head>
