Feature: Implement custom positioning of image slices

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Image Manager</title>
+	<title>Photo book</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 
@@ -14,8 +14,6 @@
 		<script src="Lib/less/less.min.js"></script>
 		<script src="Lib/FileSaver/FileSaver.js"></script>
 		<script src="Lib/RequireJS/require.js" data-main="Main.js"></script>
-
-
 	</head>
 	<body data-ng-view></body>
 </html>
