Refactoring: Remove less, using node.js to compile less

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 		<!-- styles -->
 		<link href="Resources/Styles/browserReset.css" type="text/css" rel="stylesheet" />
-		<link href="Resources/Styles/styles.less" type="text/css" rel="stylesheet/less"/>
+		<link href="Resources/Styles/styles.css" type="text/css" rel="stylesheet" />
 
-		<script src="Lib/less/less.min.js"></script>
 		<script src="Lib/FileSaver/FileSaver.js"></script>
 		<script src="Lib/RequireJS/require.js" data-main="Main.js"></script>
 	</head>
