Refactoring: Replace require.js by TypeScript modules

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 		<!-- styles -->
 		<link href="Resources/Styles/browserReset.css" type="text/css" rel="stylesheet" />
 		<link href="Resources/Styles/styles.css" type="text/css" rel="stylesheet" />
-
-		<script src="Lib/FileSaver/FileSaver.js"></script>
-		<script src="Lib/RequireJS/require.js" data-main="Main.js"></script>
 	</head>
-	<body data-ng-view></body>
+	<body data-ng-view>
+		<script src="./Resources/Libraries/FileSaver/FileSaver.js"></script>
+		<script src="./Resources/Libraries/AngularJS/angular.js" ></script>
+		<script src="./Resources/Libraries/AngularJS/angularRoute.js" ></script>
+		<script src="./Main.js" ></script>
+	</body>
 </html>
