Refactoring: Move LayoutConfiguration to normal js file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="Resources/Styles/styles.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body data-ng-view>
+		<script src="./Configuration/LayoutConfiguration.js"></script>
 		<script src="./Resources/Libraries/FileSaver/FileSaver.js"></script>
 		<script src="./Resources/Libraries/AngularJS/angular.js" ></script>
 		<script src="./Resources/Libraries/AngularJS/angularRoute.js" ></script>
